# crimson

./: README.md  pyproject.toml
src/crimson/: __init__.py  lex.py  tokens.py
tests/: lex_test.py
