[project]
name = "crimson"
version = "0.1.0"
description = "A small language for experimentation"
authors = [
    { name = "Mike Jackson", email = "hi@mikejackson.co.uk" }
]
dependencies = [
    "fastcore>=1.7.28",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.4",
    "jupyter>=1.1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/crimson"]
